// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilesListing> no files 1`] = `
<div>
  <div>
    No files for you
  </div>
</div>
`;

exports[`<FilesListing> with files custom header 1`] = `
<div>
  <div>
    <div
      class="file-listing--header bottom-padding"
    >
      Custom header
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="exam.xlsx"
              type="checkbox"
            />
            <i
              class="fa fa-file-excel-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="exam.xlsx"
              >
                <div
                  class="file-listing-filename"
                >
                  exam.xlsx
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-08 12:26:30.064
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm an excel file
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="xray.gif"
              type="checkbox"
            />
            <i
              class="fa fa-file-image-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="xray.gif"
              >
                <div
                  class="file-listing-filename"
                >
                  xray.gif
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Skywalker
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:47:51.931
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm gif
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="report.json"
              type="checkbox"
            />
            <i
              class="fa fa-file-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="report.json"
              >
                <div
                  class="file-listing-filename"
                >
                  report.json
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:48:11.472
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm a json file
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilesListing> with files deletable 1`] = `
<div>
  <div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="exam.xlsx"
              type="checkbox"
            />
            <i
              class="fa fa-file-excel-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="exam.xlsx"
              >
                <div
                  class="file-listing-filename"
                >
                  exam.xlsx
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-08 12:26:30.064
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm an excel file
          </div>
          <span
            class="pull-right"
          >
            <span
              class="pull-right file-listing-delete"
            >
              <i
                class="fa fa-times-circle file-listing-delete-icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="xray.gif"
              type="checkbox"
            />
            <i
              class="fa fa-file-image-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="xray.gif"
              >
                <div
                  class="file-listing-filename"
                >
                  xray.gif
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Skywalker
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:47:51.931
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm gif
          </div>
          <span
            class="pull-right"
          >
            <span
              class="pull-right file-listing-delete"
            >
              <i
                class="fa fa-times-circle file-listing-delete-icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="report.json"
              type="checkbox"
            />
            <i
              class="fa fa-file-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="report.json"
              >
                <div
                  class="file-listing-filename"
                >
                  report.json
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:48:11.472
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm a json file
          </div>
          <span
            class="pull-right"
          >
            <span
              class="pull-right file-listing-delete"
            >
              <i
                class="fa fa-times-circle file-listing-delete-icon"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilesListing> with files not deletable 1`] = `
<div>
  <div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="exam.xlsx"
              type="checkbox"
            />
            <i
              class="fa fa-file-excel-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=exam.xlsx&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="exam.xlsx"
              >
                <div
                  class="file-listing-filename"
                >
                  exam.xlsx
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-08 12:26:30.064
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm an excel file
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="xray.gif"
              type="checkbox"
            />
            <i
              class="fa fa-file-image-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=xray.gif&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="xray.gif"
              >
                <div
                  class="file-listing-filename"
                >
                  xray.gif
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Skywalker
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:47:51.931
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm gif
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
    <div
      class="component file-listing-row--container"
    >
      <div
        class="detail-component"
      >
        <div
          class="row"
        >
          <div
            class="col-xs-4 file-listing-icon--container"
          >
            <input
              name="report.json"
              type="checkbox"
            />
            <i
              class="fa fa-file-o file-listing-icon"
            />
          </div>
          <div
            class="col-xs-3 file-listing-info"
          >
            <strong>
              <a
                href="/labkey/sm/sampleManagement-downloadAttachments.view?jobId=282&names=sreport.json&returnUrl=%2Flabkey%2Fgpat3%2FsampleManagement-appDev.view%23%2Fworkflow%2F282%2Ffiles"
                title="report.json"
              >
                <div
                  class="file-listing-filename"
                >
                  report.json
                </div>
              </a>
            </strong>
            <br />
            <span
              class="file-listing-info-light"
            >
              <span
                class="test-loc-file-created-by"
              >
                Vader
              </span>
              <span
                class="test-loc-file-created"
              >
                2019-11-14 15:48:11.472
              </span>
            </span>
          </div>
          <div
            class="col-xs-5"
          >
            i'm a json file
          </div>
          <span
            class="pull-right"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
